--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "redux": "^4.0.5",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "swiper": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
