--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-lazyload": "^2.6.5",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-config": "^5.1.1",
@@ -16,6 +17,7 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.5",
     "redux-immutable": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2",
     "swiper": "^5.3.0"
